# BMSTU-Term-Paper-Numerical-Methods

./: CMakeLists.txt
include/: classifier.hpp  matrix.hpp  utils.hpp
src/: classifier.cpp  main.cpp  matrix.cpp  utils.cpp
test/: matrix_test.cpp
